--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-  <div class="w3-card-4 w3-blue-gray" style="width:100%">
+  <div class="w3-card-4 w3-blue-gray">
     <div class=" w3-animate-zoom w3-container w3-center">
       <h3 class="w3-animate-zoom">Nombre del Club o grupo</h3>
       <img class="w3-animate-zoom w3-round-xxlarge" src="img_avatar3.png" alt="Avatar" style="width:25%">
@@ -17,7 +17,7 @@
     </div>
   </div>
   <br/>
-  <div class="w3-card-4 w3-blue-gray" style="width:100%">
+  <div class="w3-card-4 w3-blue-gray">
     <div class=" w3-animate-zoom w3-container w3-center">
       <h3 class="w3-animate-zoom">Nombre del Club o grupo</h3>
       <img class="w3-animate-zoom w3-round-xxlarge" src="img_avatar3.png" alt="Avatar" style="width:25%">
