--- a/index.html
+++ b/index.html
@@ -12,22 +12,12 @@
       <h5>pequeña descripción</h5>
       <div class="w3-section">
         <button  class="w3-round-xxlarge w3-button w3-green w3-animate-zoom">WhatsApp</button>
-        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom">Facebook</button>
+        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom"><a href="www.google.com">Facebook</button>
       </div>
     </div>
   </div>
   <br/>
-  <div class="w3-card-4 w3-blue-gray">
-    <div class=" w3-animate-zoom w3-container w3-center">
-      <h3 class="w3-animate-zoom">Nombre del Club o grupo</h3>
-      <img class="w3-animate-zoom w3-round-xxlarge" src="img_avatar3.png" alt="Avatar" style="width:25%">
-      <h5>pequeña descripción</h5>
-      <div class="w3-section">
-        <button  class="w3-round-xxlarge w3-button w3-green w3-animate-zoom">WhatsApp</button>
-        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom">Facebook</button>
-      </div>
-    </div>
-  </div>
+
 
 
 </body>
