--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h5>pequeña descripción</h5>
       <div class="w3-section">
         <button  class="w3-round-xxlarge w3-button w3-green w3-animate-zoom">WhatsApp</button>
-        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom"><a href="www.google.com">Facebook</button>
+        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom"><a href="https://www.google.com">Facebook</button>
       </div>
     </div>
   </div>
