--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="w3-card-4 w3-blue-gray">
     <div class=" w3-animate-zoom w3-container w3-center">
       <h3 class="w3-animate-zoom">Club Apache Costa Rica</h3>
-      <img class="w3-animate-zoom w3-round-xxlarge" src="img_avatar3.png" alt="Avatar" style="width:25%">
+      <img class="w3-animate-zoom w3-round-xxlarge" src="images/descarga.jpg" alt="Avatar" style="width:25%">
       <h5>Club con ambiente familiar, no permitimos alcohol ni irresponsabilidad al conducir</h5>
       <div class="w3-section">
         <button  class="w3-round-xxlarge w3-button w3-green w3-animate-zoom">WhatsApp</button>
