--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
   <div class="w3-card-4 w3-blue-gray">
     <div class=" w3-animate-zoom w3-container w3-center">
-      <h3 class="w3-animate-zoom">Club Apache Costa Rica</h3>
-      <img class="w3-animate-zoom w3-round-xxlarge" src="images/descarga.jpg" alt="logo club" style="width:25%">
-      <h5>Club con ambiente familiar, no permitimos alcohol ni irresponsabilidad al conducir</h5>
+      <h4 class="w3-animate-zoom">Club Apache Costa Rica</h4>
+      <img class="w3-animate-zoom w3-round-xxlarge" src="images/descarga.jpg" alt="logo club" style="width:20%">
+      <p>Club con ambiente familiar, no permitimos alcohol ni irresponsabilidad al conducir</p>
       <div class="w3-section">
-        <button  class="w3-round-xxlarge w3-button w3-green w3-animate-zoom">WhatsApp</button>
-        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom"><a href="https://www.google.com">Facebook</button>
+        <button  class="w3-round-xxlarge w3-button w3-green w3-animate-zoom"><a href="https://api.whatsapp.com/send?phone=+50660465688"target="_blank">WhatsApp</button>
+        <button  class="w3-round-xxlarge w3-button w3-blue w3-animate-zoom"><a href="https://m.facebook.com/clubapachecostarica"target="_blank">Facebook</button>
       </div>
     </div>
   </div>
