--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <title>Clubes de Costa Rica</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <head>
+<style>
+div.fixed {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+
+}
+</style>
+</head>
 <body>
 
 <div class="w3-container">
@@ -25,7 +35,7 @@
   </ul>
 </div>
   <div class="fixed">
-  <button class="w3-button w3-xlarge w3-circle w3-red w3-card-4"><a href="https://goo.gl/forms/EPDV6u9Z4zYtOMM72"target="_blank">Incluir mi club</button>
+  <button class="w3-button w3-ripple"><a href="https://goo.gl/forms/EPDV6u9Z4zYtOMM72"target="_blank">Incluir mi club</button>
 </div>
 
 <script>
