--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ div.fixed {
   </ul>
 </div>
   <div class="fixed">
-  <button class="w3-button w3-ripple"><a href="https://goo.gl/forms/EPDV6u9Z4zYtOMM72"target="_blank">Incluir mi club</button>
+  <button class="w3-button w3-ripple-black"><a href="https://goo.gl/forms/EPDV6u9Z4zYtOMM72"target="_blank">+</button>
 </div>
 
 <script>
