--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <li><a href="personal.html">Info Personal</a></li>
             <li><a href="moto.html">Mis Motos</a></li>
             <li><a href="curso.html">Curso</a></li>
-            <li><a href="eventos.html">Descubre</a></li>
+            <li><a href="descubre.html">Descubre</a></li>
         </ul>
     </nav>
 
